--- a/app/src/main/res/layout/show_add.xml
+++ b/app/src/main/res/layout/show_add.xml
@@ -8,58 +8,80 @@
         android:id="@+id/show_name_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:text="测试" />
 
     <EditText
         android:id="@+id/latest_season_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:text="1" />
 
     <EditText
         android:id="@+id/total_episodes_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:text="10" />
 
     <EditText
         android:id="@+id/updated_episode_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:text="1" />
 
-    <EditText
-        android:id="@+id/updated_week_edt"
+    <Spinner
+        android:id="@+id/updatedWeek_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="星期一" />
+        android:entries="@array/updated_week" />
 
     <EditText
         android:id="@+id/updated_time_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="2016-07-30 12:00" />
+        android:focusable="false"
+        android:inputType="time"
+        android:text="12:00" />
 
     <EditText
-        android:id="@+id/next_time_edt"
+        android:id="@+id/updated_date_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="2016-08-06 12:00" />
+        android:focusable="false"
+        android:inputType="date"
+        android:text="2016-07-30" />
 
     <EditText
-        android:id="@+id/show_type_edt"
+        android:id="@+id/next_date_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="美剧" />
+        android:focusable="false"
+        android:inputType="date"
+        android:text="2016-08-06" />
 
-    <EditText
-        android:id="@+id/show_status_edt"
+    <Spinner
+        android:id="@+id/showRegion_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="连载" />
+        android:entries="@array/show_region" />
+
+    <Spinner
+        android:id="@+id/showType_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/show_type" />
+
+    <Spinner
+        android:id="@+id/showStatus_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/show_status" />
 
     <Button
-        android:id="@+id/add_show_btn"
+        android:id="@+id/show_add_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="添加" />
