--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TextBaseStyle">
+        <item name="android:textColor">@color/color_black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="ParentLayoutStyle">
+        <item name="android:padding">10dp</item>
+    </style>
     <style name="TextViewTheme">
         <item name="android:textColor">@color/color_black</item>
         <item name="android:textSize">16sp</item>
